crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__completion__argument_open_brace.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.tex\n\\usepackage{amsfonts}\n\\mathbb{\n        |\nTest\"#)"
---
[
  {
    "label": "A",
    "preselect": false
  },
  {
    "label": "B",
    "preselect": false
  },
  {
    "label": "C",
    "preselect": false
  },
  {
    "label": "D",
    "preselect": false
  },
  {
    "label": "E",
    "preselect": false
  }
]
