crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__completion__argument_word.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.tex\n\\usepackage{amsfonts}\n\\mathbb{A}\n        |\n        ^\"#)"
---
[
  {
    "label": "A",
    "preselect": false
  }
]
