crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__completion__citation_open_brace_multiple.snap
---
source: crates/texlab/tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.tex\n\\addbibresource{main.bib}\n\\cite{foo,a\n          |\n          ^\n\n%! main.bib\n@article{foo,}\"#)"
---
[
  {
    "label": "foo",
    "preselect": false,
    "filterText": "foo @article"
  }
]
