crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__completion__component_environment_command_definition.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.tex\n\\newcommand{\\foo}{\\begin{doc}\n                           |\n                         ^^^\"#)"
---
[
  {
    "label": "document",
    "detail": "built-in",
    "preselect": false
  }
]
